--- a/public/style.css
+++ b/public/style.css
@@ -19,10 +19,11 @@ body {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 12px;  
     display: grid; 
+    grid-template-rows: 75px 25px auto 50px 50px;
 }
 
 .title {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -32,4 +33,106 @@ body {
     align-items: center;
     letter-spacing: -0.035em;
     color: #4F4F4F;
+    position: relative;
+    top: 13px;
 }
+
+.description{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    color: #828282;
+}
+
+.drag_and_drop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box {
+    width: 75%;
+    height: 75%;
+    border: 1px dashed#97BEF4;
+    border-radius: 12px;
+    display: grid;
+    background-color: rgba(246, 248, 251, 1);
+
+}
+
+.box-2 {
+    width: 75%;
+    height: 75%;
+    border-radius: 12px;
+    display: grid;
+    background-color: rgba(246, 248, 251, 1);
+
+}
+
+.box-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+}
+
+.img-prev {
+    margin: auto;
+    position: relative;
+    top: 15px;
+}
+
+p {
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: -0.035em;
+    color: #BDBDBD;
+    position: relative;
+    top: 15px;
+}
+
+.or {
+    text-align: center;
+    position: relative;
+    bottom: 10px;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: -0.035em;
+    color: #BDBDBD;
+}
+
+.file_chooser {
+    text-align: center;
+    position: relative; 
+    bottom: 20px;
+}
+
+button {
+    width: 100px;
+    height: 32px;
+    font-family: "Noto Sans", sans-serif ;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: -0.035em;
+    background: #2F80ED;
+    border-radius: 8px;
+    color: white;
+    border-color: #2F80ED;
+}
+
+.drag-over {
+    border: 3px dashed #5799f7;
+}
+
+
