--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
 }
 
-.flex-container {
+.flex_container {
     width: 402px;
     height: 469px;   
     background: #FFFFFF;
@@ -84,7 +84,7 @@ body {
     top: 15px;
 }
 
-p {
+.drag {
     text-align: center;
     font-family: "Poppins", sans-serif;
     font-style: normal;
@@ -135,4 +135,63 @@ button {
     border: 3px dashed #5799f7;
 }
 
+.hidden {
+    display: none;
+}
 
+
+/* LOADING SCREEN */
+.loading_box {
+    width: 400px;
+    height: 143px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+}
+
+.uploading {
+    color: rgba(79, 79, 79, 1);
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: -0.035em;
+    position: relative;
+    top: 30px;
+    left: 50px;
+}
+
+
+.loading {
+    background-color:rgb(238, 238, 238);
+    width: 75%;
+    height: 8px;
+    margin: auto;
+    border-radius: 10px;
+    overflow:-moz-hidden-unscrollable;
+    position: relative;
+    top: 40px;
+}
+
+.load_bar {
+    border-radius: 10px;
+    position: relative;
+    background-color: #2F80ED;
+    width: 30%;
+    height: 100%;
+    animation-name: "bar";
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+}
+
+@keyframes bar {
+    0% {
+        left: -90px;
+    }
+    100% {
+        left: 300px;
+    }
+}
