--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,15 @@
 body {
     margin: 0px;
+    background-color: rgb(238, 238, 238);
 }
 
 .container {
-    position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: rgb(238, 238, 238);  
     justify-content: center;
-    align-items: center;
+    position: relative;
+    top: 70px;
 }
 
 .flex_container {
@@ -20,6 +20,19 @@ body {
     border-radius: 12px;  
     display: grid; 
     grid-template-rows: 75px 25px auto 50px 50px;
+    position: relative;
+    
+}
+
+.flex_container_load {
+    width: 500px;
+    height: 570px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;  
+    display: grid; 
+    grid-template-rows: 75px 35px auto 50px;
+    position: relative;
 }
 
 .title {
@@ -194,4 +207,23 @@ button {
     100% {
         left: 300px;
     }
+}
+
+.icon {
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    position: relative;
+    top: 20px;
+}
+
+input {
+    width: 320px;
+    height: 28px;
+    background-color: rgba(246, 248, 251, 1);
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 27px;
 }
